INCLUDES = -I$(top_srcdir)/libsrc2

LDADD = $(top_srcdir)/libminc2.la

TESTS =	\
	datatype-test \
	dimension-test \
	full-test \
	grpattr-test \
	hyper-test \
	label-test \
	record-test \
	slice-test \
	valid-test \
	volprops-test \
	multires-test
#	convert-test

check_PROGRAMS = $(TESTS)

CLEANFILES = *.mnc



