INCLUDES = -I$(top_srcdir)/libsrc2

LDADD = ../../libminc2.la

AM_CFLAGS = -DAPPARENTORDER

TESTS =	\
	create-test-images \
	create-test-images-2 \
	datatype-test \
	dimension-test \
	full-test \
	grpattr-test \
	hyper-test \
        hyper-test-2 \
	label-test \
	record-test \
	slice-test \
	valid-test \
	volprops-test \
	multires-test \
	convert-test \
	vector_dimension-test 

check_PROGRAMS = $(TESTS)

CLEANFILES = *.mnc



